# angelamos-3d

./: .env.example  .gitignore  Justfile  Makefile  README.md  ROADMAP.md  compose.cpu.yml  compose.yml  install.sh  package.json
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/chat/: __init__.py  router.py  schemas.py  service.py
backend/app/core/: __init__.py  exceptions.py  schemas.py
backend/app/stt/: __init__.py  router.py  schemas.py  service.py
backend/app/tts/: __init__.py  router.py  schemas.py  service.py
backend/app/wake/: __init__.py  router.py  schemas.py  service.py
backend/models/: angela.tflite
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  stylelint.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/animations/idle/: Armada.fbx  Capoeira.fbx  Chapaeu De Couro.fbx  Martelo Do Chau.fbx  Mma Idle.fbx  Run To Flip.fbx  Spin Flip Kick.fbx
frontend/public/animations/listening-thinking/: Bashful.fbx  Talking On Phone.fbx
frontend/public/animations/speaking/: Breakdance 1990.fbx  Breakdance Freeze Var 3.fbx  Breakdance Freezes.fbx  Flair.fbx  Headspin End.fbx  Headspin Start.fbx
frontend/src/: AngelaPage.tsx  App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: edgetts.client.ts  index.ts  ollama.client.ts  tts.client.ts  whisper.client.ts
frontend/src/components/StatusOverlay/: StatusOverlay.module.scss  StatusOverlay.tsx  index.ts
frontend/src/config/: angela.config.ts  index.ts
frontend/src/hooks/: index.ts  useThreeScene.ts  useVoicePipeline.ts  useWakeWord.ts
frontend/src/lib/: debug.ts  index.ts
frontend/src/lib/animation/: AnimationController.ts  AnimationManager.ts  index.ts  loadMixamoAnimation.ts  mixamoVRMRigMap.ts
frontend/src/lib/audio/: AudioRecorder.ts  SilenceDetector.ts  index.ts
frontend/src/lib/wakeword/: WakeWordEngine.ts  index.ts
frontend/src/types/: angela.types.ts  index.ts
nginx/: dev.conf  nginx.conf
